# headroom-benchmarks

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: api_exploration.ipynb
scratch/: bench_sre_incident.py
scratch/langgraph_bench/: README.md
scratch/langgraph_bench/agent/: pricing.py  tools.py
scratch/langgraph_bench/db/: seed.py
scratch/langgraph_bench/mcp_server/: server.py
scratch/langgraph_bench/runner/: metrics.py  run.py  test_cases.json
scratch/tier1/: bench_bfcl.py  bench_gsm8k.py  bench_squad.py  bench_truthfulqa.py  common.py  run_all.py
src/headroom_benchmarks/: __init__.py
src/headroom_benchmarks/benchmarks/synthetic/: code_search.py
src/headroom_benchmarks/benchmarks/tier1/: bfcl.py  common.py  gsm8k.py  run_all.py  squad.py  truthfulqa.py
src/headroom_benchmarks/langgraph/: README.md
src/headroom_benchmarks/langgraph/agent/: callbacks.py  client.py  graph.py  tools.py
src/headroom_benchmarks/langgraph/db/: schema.sql
src/headroom_benchmarks/langgraph/mcp_server/: server.py
src/headroom_benchmarks/langgraph/runner/: run.py
tests/: test_pricing_litellm.py
