[project]
name = "headroom-benchmarks"
version = "0.1.0"
description = "End-to-end benchmark of headroom-ai as an LLM-call compression proxy, running a real LangGraph ReAct agent against MiniMax-M3 (Anthropic-compatible endpoint)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "shreyassks" },
]
keywords = [
    "headroom-ai",
    "compression",
    "langgraph",
    "minimax",
    "mcp",
    "anthropic-sdk",
    "benchmark",
    "agent",
]

dependencies = [
    "faker>=40.23.0",
    "headroom-ai[all]>=0.27.0",
    "langchain-anthropic>=1.4.7",
    "langchain-core>=0.3",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.6",
    "litellm>=1.89.2",
    "mcp>=1.0",
]

[project.scripts]
# `uv run headroom-bench` runs the LangGraph × Headroom benchmark.
headroom-bench = "headroom_benchmarks.langgraph.runner.run:main"
# `uv run headroom-bench-all` runs the Tier-1 suite (N=100 by default).
headroom-bench-all = "headroom_benchmarks.benchmarks.tier1.run_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom_benchmarks"]

[tool.uv]
package = true

[tool.pytest.ini_options]
# Placeholder for future test additions.
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "nbclient>=0.11.0",
    "pytest>=9.1.1",
    "ruff>=0.15.19",
]
